# speakagent_desktop

./: .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.md  NOTICE.md  README.en.md  README.md  SECURITY.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
scripts/: fetch-models.mjs
spike/: README.md  download_models.py  requirements.txt  run_spike.py
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/examples/: try_llm.rs  try_punct.rs  try_transcribe.rs
src-tauri/icons/: icon.icns
src-tauri/src/: keys.rs  lib.rs  main.rs  mcp.rs
src-tauri/src/engine/: asr.rs  audio.rs  decode.rs  diarize.rs  dictation.rs  gpu.rs  llm.rs  mod.rs  models.rs  pdf.rs  prompts.rs  punct.rs  sound.rs  store.rs
src/components/: AiProvider.tsx  AudioPlayer.tsx  BeautifySettings.tsx  Diagnostics.tsx  DiarizeRenderer.tsx  DragDropOverlay.tsx  ExportMenu.tsx  Layout.tsx  LlmModelSelector.tsx  MeetingResults.tsx  ModelSelector.tsx  Onboarding.tsx  ProgressBar.tsx  ResultView.tsx  SpeakerRoster.tsx  StatusBar.tsx
src/i18n/: index.ts
src/i18n/dict/: about.ts  aiProvider.ts  beautify.ts  common.ts  diagnostics.ts  dictation.ts  dragDrop.ts  exportMenu.ts  home.ts  mcp.ts  meeting.ts  modelSelector.ts  models.ts  nav.ts  onboarding.ts  overlay.ts  perf.ts  progress.ts  resultView.ts  settings.ts  speakers.ts  statusBar.ts  transcribe.ts
src/lib/: api.ts  diarize.ts  exporters.ts  format.ts  highlight.tsx  perf.ts  update.ts
src/pages/: AboutPage.tsx  DictationPage.tsx  HistoryPage.tsx  HomePage.tsx  McpServerPage.tsx  OverlayPage.tsx  SettingsPage.tsx  TranscribePage.tsx
src/store/: dictation.ts  jobs.ts  ui.ts
