[package]
name = "speakagent"
version = "0.3.0"
description = "SpeakAgent Desktop — offline transcription & diarization"
authors = ["SpeakAgent"]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/legolev/speakagent_desktop"
readme = "../README.md"

[lib]
name = "speakagent_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "macos-private-api", "tray-icon", "image-png"] }
tauri-plugin-dialog = "2"
# Авто-обновление: проверка/скачивание/установка релизов с GitHub + перезапуск.
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
# Диктовка: буфер обмена (вызываем из Rust).
tauri-plugin-clipboard-manager = "2"
# Диктовка: глобальный слушатель клавиш — собственный (src/keys.rs). macOS: CGEventTap
# (см. target-зависимости ниже). Windows: WH_KEYBOARD_LL (крейт `windows`, фичи ниже).
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Диктовка: захват микрофона (WASAPI/CoreAudio, системные API, без C++).
cpal = "0.15"
# Диктовка: эмуляция Cmd/Ctrl+V для авто-вставки на активный курсор.
enigo = "0.3"
# Диктовка: короткие звуковые сигналы старт/стоп (pure-Rust, поверх cpal).
rodio = { version = "0.19", default-features = false, features = ["wav"] }
# Локальный MCP-сервер: HTTP (JSON-RPC поверх axum) на 127.0.0.1. Всё pure-Rust.
axum = "0.7"
tokio = { version = "1", features = ["rt-multi-thread", "net", "sync", "time", "macros"] }
# Движок ASR + диаризация + VAD (официальный биндинг sherpa-onnx; download-binaries = prebuilt, без сборки C++)
# ≥1.13.4: фикс не-ASCII путей на Windows (кириллическое имя пользователя ломало загрузку моделей)
sherpa-onnx = "1.13.4"
# Декод аудио/видео → PCM (pure-Rust). mp3/aac/mp4/flac/wav/ogg.
symphonia = { version = "0.5", features = ["aac", "isomp4", "mp3", "flac", "wav", "ogg", "vorbis", "pcm"] }
# Локальное хранилище истории (SQLite, компилится из исходников — bundled)
rusqlite = { version = "0.40", features = ["bundled"] }
dirs = "6"
# Менеджер моделей: загрузка (HTTP) + распаковка tar.bz2 / tar.gz / zip
ureq = "2"
tar = "0.4"
bzip2 = "0.4"
flate2 = "1"
zip = { version = "2", default-features = false, features = ["deflate"] }
# Генерация PDF со встроенным шрифтом (кириллица)
genpdf = "0.2"
# Детект железа и нагрузки (ядра, RAM, CPU%)
sysinfo = "0.32"
# Восстановление пунктуации/регистра (RUPunct): чистый-Rust ONNX-рантайм tract —
# НЕ линкует onnxruntime (у sherpa свой, статический) → без второй DLL и без cmake.
tract-onnx = "0.21"
# Токенизатор WordPiece для модели пунктуации. Без onig/esaxx (C/C++); fancy-regex — чистый Rust.
tokenizers = { version = "0.23", default-features = false, features = ["fancy-regex"] }
# Стабильный аппаратный ID машины (IOPlatformUUID / MachineGuid / machine-id) — для ID устройства.
machine-uid = "0.6"

[target.'cfg(any(target_os = "windows", target_os = "macos"))'.dependencies]
window-vibrancy = "0.5"

[target.'cfg(target_os = "macos")'.dependencies]
# Глобальный слушатель клавиш диктовки: CGEventTap + CFRunLoop. Системные фреймворки.
core-graphics = "0.24"
core-foundation = "0.10"

[target.'cfg(windows)'.dependencies]
# Детект GPU (DXGI) + низкоуровневый хук клавиатуры (WH_KEYBOARD_LL) для диктовки.
windows = { version = "0.61", features = [
    "Win32_Graphics_Dxgi",
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    # ShellExecuteW — открыть http(s)/deep-link в браузере по умолчанию (см. open_url).
    "Win32_UI_Shell",
] }
